[Render][UI] Improved naming convention

--- a/src/index.html
+++ b/src/index.html
@@ -13,20 +13,20 @@
   <div class="game-wrapper">
 
     <!-- 3d canvas -->
-    <canvas id="renderCanvas" touch-action="none"></canvas>
+    <canvas id="canvas3d" touch-action="none"></canvas>
   
     <!-- 2d canvas -->
-    <div id="canvas-wrapper">
-      <canvas id="canvas">
+    <div id="canvas2d-wrapper">
+      <canvas id="canvas2d">
         Your browser is an old, or you don't have JavaScript enabled
       </canvas>
     </div>
 
     <!-- UI panel -->
     <div id="ui">
-      <p>Drag mouse to move camera & use mousewheel to zoom.</p>
-      <button id="generate">Perturbate</button>&nbsp;
-      <button id="random-seed">New terrain</button>&nbsp;
+      <p>Drag mouse to move camera and use mousewheel to zoom.</p>
+      <button id="btn-update">Perturbate</button>&nbsp;
+      <button id="btn-new">New terrain</button>&nbsp;
     </div>
   
   </div>
