[UI] New dynamic (better) ocean checkbox

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,8 @@
         <option value="ssao">SSAO</option>
         <option value="multi">Multi FX</option>
       </select>
+      <label for="ui-checkbox-better-ocean">Realistic ocean</label>
+      <input id="ui-checkbox-better-ocean" type="checkbox">
     </div>
   
   </div>
