[UI] New dynamic auto-rotate camera checkbox

--- a/src/index.html
+++ b/src/index.html
@@ -25,16 +25,22 @@
     <!-- UI panel -->
     <div id="ui">
       <p>Drag mouse to move camera and use mousewheel to zoom.</p>
-      <button id="ui-btn-update">Perturbate</button>&nbsp;
-      <button id="ui-btn-new">New terrain</button>&nbsp;
-      <label for="ui-select-postprocess">Post-process</label>
-      <select id="ui-select-postprocess">
-        <option value="none">None</option>
-        <option value="ssao">SSAO</option>
-        <option value="multi">Multi FX</option>
-      </select>
-      <label for="ui-checkbox-better-ocean">Realistic ocean</label>
-      <input id="ui-checkbox-better-ocean" type="checkbox">
+      <p>
+        <button id="ui-btn-update">Perturbate</button>&nbsp;
+        <button id="ui-btn-new">New terrain</button>
+      </p>
+      <p>
+        <label for="ui-select-postprocess">Post-process</label>
+        <select id="ui-select-postprocess">
+          <option value="none">None</option>
+          <option value="ssao">SSAO</option>
+          <option value="multi">Multi FX</option>
+        </select>
+        <label for="ui-checkbox-better-ocean">Realistic ocean</label>
+        <input id="ui-checkbox-better-ocean" type="checkbox">
+        <label for="ui-camera-auto-rotate">Auto-rotate</label>
+        <input id="ui-camera-auto-rotate" type="checkbox">
+      </p>
     </div>
   
   </div>
