[ALL] Move cursor with arrow keys, camera will follow

--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,13 @@
     <!-- 2d canvas -->
     <div id="canvas2d-wrapper">
       <canvas id="canvas2d">
-        Your browser is an old, or you don't have JavaScript enabled
+        Your browser is old, or you don't have JavaScript enabled!
       </canvas>
     </div>
 
     <!-- UI panel -->
     <div id="ui">
-      <p>Drag mouse to move camera and use mousewheel to zoom.</p>
+      <!-- <p>Drag mouse to move camera and use mousewheel to zoom.</p> -->
       <p>
         <button id="ui-btn-update">Perturbate</button>&nbsp;
         <button id="ui-btn-new">New terrain</button>
@@ -38,8 +38,8 @@
         </select>
         <label for="ui-checkbox-better-ocean">Realistic ocean</label>
         <input id="ui-checkbox-better-ocean" type="checkbox">
-        <label for="ui-camera-auto-rotate">Auto-rotate</label>
-        <input id="ui-camera-auto-rotate" type="checkbox">
+        <!-- <label for="ui-camera-auto-rotate">Auto-rotate</label>
+        <input id="ui-camera-auto-rotate" type="checkbox"> -->
       </p>
     </div>
   
