[Render3D] Camera can now zoom and rotate

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
     <!-- UI panel -->
     <div id="ui">
-      <!-- <p>Drag mouse to move camera and use mousewheel to zoom.</p> -->
+      <p>KEYS: arrows to move cursor, E and R to zoom in and out, T and Y to rotate camera</p>
       <p>
         <button id="ui-btn-update">Perturbate</button>&nbsp;
         <button id="ui-btn-new">New terrain</button>
