[Game] Players can move

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
     <!-- UI panel -->
     <div id="ui">
-      <p>KEYS: arrows to move cursor, E and R to zoom in and out, T and Y to rotate camera</p>
+      <p>KEYS: arrows to move cursor, X to do action, C to cancel, E and R to zoom in and out, T and Y to rotate camera</p>
       <p>
         <button id="ui-btn-update">Perturbate</button>&nbsp;
         <button id="ui-btn-new">New terrain</button>
