[Render3D] New free camera with checkbox for switching the active camera

--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,10 @@
         </select>
         <label for="ui-checkbox-better-ocean">Realistic ocean</label>
         <input id="ui-checkbox-better-ocean" type="checkbox">
-        <!-- <label for="ui-camera-auto-rotate">Auto-rotate</label>
-        <input id="ui-camera-auto-rotate" type="checkbox"> -->
+        <label for="ui-camera-free">Free camera</label>
+        <input id="ui-camera-free" type="checkbox">
+        <label for="ui-camera-auto-rotate">Auto-rotate</label>
+        <input id="ui-camera-auto-rotate" type="checkbox">
       </p>
     </div>
   
