--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
   
   </div>
-<script type="text/javascript" src="app.bundle.js"></script></body>
+<script type="text/javascript" src="main.bundle.js"></script></body>
 
 </html>
 
