[Render3D][DomUI] Switching the free camera rotation mode doesn't mutate CONFIG anymore

--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,8 @@
         <input id="ui-checkbox-better-ocean" type="checkbox">
         <label for="ui-camera-free">Free camera</label>
         <input id="ui-camera-free" type="checkbox">
-        <label for="ui-camera-auto-rotate">Auto-rotate</label>
-        <input id="ui-camera-auto-rotate" type="checkbox">
+        <label for="ui-camera-free-auto-rotate">Auto-rotate</label>
+        <input id="ui-camera-free-auto-rotate" type="checkbox">
       </p>
     </div>
   
