[DomUI][Game] The game menu is alive

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,14 @@
         <input id="ui-camera-free-auto-rotate" type="checkbox">
       </p>
     </div>
+
+    <!-- Game menu panel -->
+    <div id="game-menu">
+      <button class="game-menu-item" id="game-menu-Attack">Attack</button>
+      <button class="game-menu-item" id="game-menu-Wait">Wait</button>
+      <button class="game-menu-item" id="game-menu-EndTurn">End turn</button>
+      <button class="game-menu-item" id="game-menu-QuitGame">Quit game</button>
+    </div>
   
   </div>
 </body>
