[DOM] New Player XXXs turn banner

--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,13 @@
       <button class="game-menu-item" id="game-menu-EndTurn">End turn</button>
       <button class="game-menu-item" id="game-menu-QuitGame">Quit game</button>
     </div>
+
+    <!-- Fullscreen banner-->
+    <div id="big-banner" class="above text-left">
+      <div id="big-banner-content">
+        Next player...
+      </div>
+    </div>
   
   </div>
 </body>
