[Game] Units can conquer buildings

--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,7 @@
     <!-- Game menu panel -->
     <div id="game-menu">
       <button class="game-menu-item" id="game-menu-Attack">Attack</button>
+      <button class="game-menu-item" id="game-menu-Conquer">Conquer</button>
       <button class="game-menu-item" id="game-menu-Wait">Wait</button>
       <button class="game-menu-item" id="game-menu-EndTurn">End turn</button>
       <button class="game-menu-item" id="game-menu-QuitGame">Quit game</button>
