[Game][UI] Players can now build units if enough money

--- a/src/index.html
+++ b/src/index.html
@@ -60,15 +60,14 @@
       <button class="game-menu-item" id="game-menu-Attack">Attack</button>
       <button class="game-menu-item" id="game-menu-Conquer">Conquer</button>
       <button class="game-menu-item" id="game-menu-Wait">Wait</button>
+      <button class="game-menu-item" id="game-menu-BuildUnits">Build units</button>
       <button class="game-menu-item" id="game-menu-EndTurn">End turn</button>
       <button class="game-menu-item" id="game-menu-QuitGame">Quit game</button>
     </div>
 
     <!-- Fullscreen banner-->
     <div id="big-banner" class="above text-left">
-      <div id="big-banner-content">
-        Next player...
-      </div>
+      <div id="big-banner-content"></div>
     </div>
   
   </div>
