[Game][UI] New top panel, players can earn and spend their money

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,12 @@
       </canvas>
     </div>
 
+    <!-- Top panel -->
+    <div id="top-panel">
+      <div class="top-panel-item">Player <span id="player-name"></span></div>
+      <div class="top-panel-item">Money <span id="player-money"></span>$</div>
+    </div>
+
     <!-- UI panel -->
     <div id="ui">
       <p>KEYS: arrows to move cursor, X to do action, C to cancel, E and R to zoom in and out, T and Y to rotate camera</p>
