--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <title>Hexgame</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+  <link rel="manifest" href="/img/site.webmanifest">
+  <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#ff8000">
+  <link rel="shortcut icon" href="/img/favicon.ico">
+  <meta name="msapplication-TileColor" content="#2d89ef">
+  <meta name="msapplication-config" content="/img/browserconfig.xml">
+  <meta name="theme-color" content="#000000">
 <link href="./css/app.css" rel="stylesheet"></head>
 
 <body>
@@ -20,6 +30,12 @@
       <canvas id="canvas2d">
         Your browser is old, or you don't have JavaScript enabled!
       </canvas>
+    </div>
+
+    <!-- Top panel -->
+    <div id="top-panel">
+      <div class="top-panel-item">Player <span id="player-name"></span></div>
+      <div class="top-panel-item">Money <span id="player-money"></span>$</div>
     </div>
 
     <!-- UI panel -->
@@ -40,9 +56,24 @@
         <input id="ui-checkbox-better-ocean" type="checkbox">
         <label for="ui-camera-free">Free camera</label>
         <input id="ui-camera-free" type="checkbox">
-        <label for="ui-camera-auto-rotate">Auto-rotate</label>
-        <input id="ui-camera-auto-rotate" type="checkbox">
+        <label for="ui-camera-free-auto-rotate">Auto-rotate</label>
+        <input id="ui-camera-free-auto-rotate" type="checkbox">
       </p>
+    </div>
+
+    <!-- Game menu panel -->
+    <div id="game-menu">
+      <button class="game-menu-item" id="game-menu-Attack">Attack</button>
+      <button class="game-menu-item" id="game-menu-Conquer">Conquer</button>
+      <button class="game-menu-item" id="game-menu-Wait">Wait</button>
+      <button class="game-menu-item" id="game-menu-BuildUnits">Build units</button>
+      <button class="game-menu-item" id="game-menu-EndTurn">End turn</button>
+      <button class="game-menu-item" id="game-menu-QuitGame">Quit game</button>
+    </div>
+
+    <!-- Fullscreen banner-->
+    <div id="big-banner" class="above text-left">
+      <div id="big-banner-content"></div>
     </div>
   
   </div>
