--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <!-- Game menu panel -->
     <div id="game-menu">
       <button class="game-menu-item" id="game-menu-Attack">Attack</button>
+      <button class="game-menu-item" id="game-menu-Heal">Heal</button>
       <button class="game-menu-item" id="game-menu-Conquer">Conquer</button>
       <button class="game-menu-item" id="game-menu-Wait">Wait</button>
       <button class="game-menu-item" id="game-menu-BuildUnits">Build units</button>
