[DOM] Fullscreen button

--- a/src/index.html
+++ b/src/index.html
@@ -39,25 +39,26 @@
     </div>
 
     <!-- UI panel -->
-    <div id="ui">
+    <div id="options-panel">
       <p>KEYS: arrows to move cursor, X to do action, C to cancel, E and R to zoom in and out, T and Y to rotate camera</p>
       <p>
-        <button id="ui-btn-update">Perturbate</button>&nbsp;
-        <button id="ui-btn-new">New terrain</button>
+        <button id="options-btn-update">Perturbate</button>&nbsp;
+        <button id="options-btn-new">New terrain</button>
       </p>
       <p>
-        <label for="ui-select-postprocess">Post-process</label>
-        <select id="ui-select-postprocess">
+        <button id="options-btn-fullscreen">Fullscreen</button>
+        <label for="options-select-postprocess">Post-process</label>
+        <select id="options-select-postprocess">
           <option value="none">None</option>
           <option value="ssao">SSAO</option>
           <option value="multi">Multi FX</option>
         </select>
-        <label for="ui-checkbox-better-ocean">Realistic ocean</label>
-        <input id="ui-checkbox-better-ocean" type="checkbox">
-        <label for="ui-camera-free">Free camera</label>
-        <input id="ui-camera-free" type="checkbox">
-        <label for="ui-camera-free-auto-rotate">Auto-rotate</label>
-        <input id="ui-camera-free-auto-rotate" type="checkbox">
+        <label for="options-checkbox-better-ocean">Realistic ocean</label>
+        <input id="options-checkbox-better-ocean" type="checkbox">
+        <label for="options-camera-free">Free camera</label>
+        <input id="options-camera-free" type="checkbox">
+        <label for="options-camera-free-auto-rotate">Auto-rotate</label>
+        <input id="options-camera-free-auto-rotate" type="checkbox">
       </p>
     </div>
 
