[DOM] The bottom options panel is now collapsed by default

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,10 @@
 
     <!-- UI panel -->
     <div id="options-panel">
-      <p>KEYS: arrows to move cursor, X to do action, C to cancel, E and R to zoom in and out, T and Y to rotate camera</p>
+      <p>
+        KEYS: arrows to move cursor, X to do action, C to cancel, E and R to zoom in and out, T and Y to rotate camera
+        <button id="options-btn-toggle-panel">+</button>&nbsp;
+      </p>
       <p>
         <button id="options-btn-update">Perturbate</button>&nbsp;
         <button id="options-btn-new">New terrain</button>
