--- a/src/index.html
+++ b/src/index.html
@@ -34,19 +34,27 @@
 
     <!-- Top panel -->
     <div id="top-panel">
-      <div class="top-panel-item">Player <span id="player-name"></span></div>
-      <div class="top-panel-item">Money <span id="player-money"></span>$</div>
+      <section class="itembar">
+        <div class="itembar-item">Player <span id="player-name"></span></div>
+        <div class="itembar-item">Money <span id="player-money"></span>$</div>
+      </section>
+      <section class="itembar">
+        <div class="itembar-item">Mode <span id="info-mode"></span></div>
+      </section>
     </div>
 
     <!-- UI panel -->
     <div id="options-panel">
       <p>
-        KEYS: arrows to move cursor, X to do action, C to cancel, E and R to zoom in and out, T and Y to rotate camera
-        <button id="options-btn-toggle-panel">+</button>&nbsp;
+        KEYS: arrows to move cursor, X to do action, C to cancel, E and R to zoom in and out, T and Y to rotate camera&nbsp;&nbsp;
+        <button id="options-btn-toggle-panel">+</button>
       </p>
       <p>
-        <button id="options-btn-update">Perturbate</button>&nbsp;
-        <button id="options-btn-new">New terrain</button>
+        <!-- <button id="options-btn-update">Perturbate</button>&nbsp;&nbsp; -->
+        <button id="options-btn-new-terrain">New terrain</button>&nbsp;&nbsp;
+        <button id="options-btn-new-buildings">New buildings</button>&nbsp;&nbsp;
+        <button id="options-btn-new-units">New units</button>&nbsp;&nbsp;
+        <button id="options-btn-play" class="btn-highlight">Play!</button>
       </p>
       <p>
         <button id="options-btn-fullscreen">Fullscreen</button>
