[DOM] Better play button, with disabled state

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
         <button id="options-btn-new-terrain">New terrain</button>&nbsp;&nbsp;
         <button id="options-btn-new-buildings">New buildings</button>&nbsp;&nbsp;
         <button id="options-btn-new-units">New units</button>&nbsp;&nbsp;
-        <button id="options-btn-play" class="btn-highlight">Play!</button>
+        <button id="options-btn-play" class="btn-strong btn-highlight">Play!</button>
       </p>
       <p>
         <button id="options-btn-fullscreen">Fullscreen</button>
